[gd_scene load_steps=7 format=3 uid="uid://nqmjnbe8g36d"]

[ext_resource type="Script" path="res://scripts/entities/buildings/building.gd" id="1_building"]
[ext_resource type="Script" path="res://scripts/entities/animals/components/selectable_component.gd" id="2_selectable"]
[ext_resource type="Script" path="res://scripts/entities/buildings/components/worker_slot_component.gd" id="3_worker_slots"]
[ext_resource type="Script" path="res://scripts/entities/buildings/components/shelter_component.gd" id="4_shelter"]

[sub_resource type="BoxMesh" id="BoxMesh_shelter"]
size = Vector3(1.2, 0.8, 1.2)

[sub_resource type="StandardMaterial3D" id="Material_shelter"]
albedo_color = Color(0.6, 0.4, 0.2, 1)

[node name="Shelter" type="Node3D"]
script = ExtResource("1_building")

[node name="Visual" type="Node3D" parent="."]

[node name="Placeholder" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh = SubResource("BoxMesh_shelter")
surface_material_override/0 = SubResource("Material_shelter")

[node name="SelectableComponent" type="Node" parent="."]
script = ExtResource("2_selectable")

[node name="WorkerSlotComponent" type="Node" parent="."]
script = ExtResource("3_worker_slots")

[node name="ShelterComponent" type="Node" parent="."]
script = ExtResource("4_shelter")
